# splendor-render

./: .gitignore  LICENSE  MANIFEST.in  README.md  default_assets.cfg  defaults.cfg  pyproject.toml  setup.cfg  setup.py  setup_off.py
assets/panoramas/: license.txt
assets/scenes/: cereal.json  grey_cube.json  highschool_cube.json  rainbox_cube.json
default_assets/scenes/: cereal.json
examples/scenes/: high_school_cube.json
renderpy/: assets.py  bezier.py  blurry_mipmaps.py  buffer_manager.py  buffer_manager_egl.py  buffer_manager_glfw.py  buffer_manager_glut.py  camera.py  core.py  example_scenes.py  examples.py  exceptions.py  frame_buffer.py  frame_buffer_wrapper.py  gibson_environment_maps.py  glfw_window.py  glut.py  glut_window.py  image.py  interactive_camera.py  interactive_viewer.py  json_numpy.py  leak_test.py  light_room.py  mask_viewer.py  masks.py  mesh_viewer.py  obj_mesh.py  opengl_wrapper.py  panorama_to_cube.py  pose_utils.py  primitives.py  reflection_maps_from_scene.py  reflection_to_diffuse.py  render.py  render_scene.py  renderpy.py  renderpy_shaders.py  resize_image.py  shader_definitions.py  (+5 more)
renderpy/console/: drpy_mask_viewer.py  drpy_render.py  drpy_viewer.py  gibson_environment_maps.py  light_room.py  matterport_environment_maps.py  panorama_to_cube.py  reflection_maps_from_scene.py  reflection_to_diffuse.py  spinner.py
renderpy/contexts/: buffer_manager_glut.py  egl.py  glut.py  initialization.py
renderpy/example_meshes/: 003_cracker_box.mtl
renderpy/example_scenes/: multi_light.json  one_light.json  single_cracker.json
renderpy/image_light/: diffuse.py  panorama.py
renderpy/shaders/: background.py  color_render.py  coord_render.py  depthmap.py  image_light.py  lighting_model.py  lighting_model_old.py  mask_render.py  mesh.py  pbr.py  shader_definitions.py  skybox.py  utils.py
splendor/: assets.py  blurry_mipmaps.py  camera.py  core.py  core_trimesh.py  download.py  drawing.py  exceptions.py  frame_buffer.py  image.py  interactive_camera.py  json_numpy.py  mask_viewer.py  masks.py  obj_mesh.py  pose_utils.py  primitives.py  render.py  resize_image.py  shader_library.py  viewer.py
splendor/contexts/: egl.py  glut.py  initialization.py
splendor/experimental/: light_room  reflect_maps_from_scene  shadow_test.py
splendor/image_light/: diffuse.py  panorama.py
splendor/scripts/: panorama_to_image_light.py  panorama_to_strip.py  reflect_to_diffuse.py  splendor_asset_installer.py  splendor_mask_inspector.py  splendor_render.py  splendor_viewer.py  triangulate_obj.py
splendor/shaders/: background.py  color_render.py  depthmap.py  image_light.py  lighting_model.py  mask_render.py  mesh.py  pbr.py  shadows.py
src/splendor/: asset_library.py  assets.py  camera.py  core.py  download.py  frame_buffer.py  home.py  mask_viewer.py  render.py
src/splendor/shaders/: coord_render.py  depthmap.py
