[metadata]
name = splendor-render-test
version = 0.3.4
author = Aaron Walsman
author_email = aaronwalsman@gmail.com
description = A fancy shiny python renderer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aaronwalsman/splendor-render
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = True
packages = splendor
python_requires = >= 3.6
install_requres =
    Pillow
    numpy
    gdown
    PyOpenGL>=3.1.5
scripts =
    bin/splendor_viewer
    bin/splendor_render
    bin/splendor_mask_inspector
    bin/panorama_to_strip
    bin/panorama_to_image_light
    bin/reflect_to_diffuse
    bin/triangulate_obj
